MCR-3670 Remove instance name suffixes other than .Class (#2924)
* MCR-3670 ! depcreate instance name suffixes other than .Class

* MCR-3670 ! remove instance name suffixes other than .Class

* MCR-3670 ! address code review feedback

* MCR-3670 update missing property name

* MCR-3670 minor improvements

* MCR-3670 ! change default value of MCRPostConstruction to CANONICAL

* MCR-3670 fix explicit class instantiation property